Spacing fix

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1357,6 +1357,7 @@ button.classic-light:active, .classic-light button:active {
   outline: none;
   transform: rotate(-90deg);
   border-radius: 4px;
+  margin-right: -40px;
 }
 
 .vertical-slider::-webkit-slider-thumb {
